--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-body {
+:root {
+  --backgroundColor: #242426;
+  --accentTurquoise: #0abab5;
+  --accentPink: #FF0066;
+}
+
+html {
   margin: 0;
+  font-size: 62.5%;
+}
+
+body {
+  background-color: var(--backgroundColor);
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +22,165 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Setup snippet */
+
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+
+html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
+
+*, *:before, *:after {box-sizing: inherit}
+
+.visuallyhidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
+
+/* Basic styles */
+
+h1 {
+  font-size: 4rem;
+  margin: 5px 0;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 2.5rem;
+}
+
+p, button, input {
+  font-size: 1.8rem;
+}
+
+button {
+  color: white;
+  border: 2px solid var(--accentPink);
+  border-radius: 10px;
+  background-color: transparent;
+  padding: 20px 15px;
+  align-self: center;
+  font-weight: bold;
+}
+
+/* Main Page Styles */
+
+.flexContainer {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainPage {
+  max-width: 600px;
+  min-height: 400px;
+  padding: 20px;
+  margin: 0 auto;
+  text-align: center;
+  border: 4px double var(--accentTurquoise);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+/* App styles - form */
+
+.createCard {
+  align-self: center;
+  padding: 50px 70px;
+  border: 4px double var(--accentTurquoise);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.exerciseLine {
+  display: grid;
+  grid-template-columns: repeat(5, 100px);
+  grid-gap: 10px;
+  align-items: center;
+}
+
+form {
+  
+  display: grid;
+  grid-template-columns: 1fr repeat(5, auto) 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas: ". workoutPlanLabel workoutPlan workoutPlan workoutPlan workoutPlan ."
+                        ". exercise sets reps weight rest ."
+                        ". exerciseButton . . button button .";
+  grid-gap: 15px;
+  justify-content: center;
+}
+
+.workoutPlanLabel {
+  grid-area: workoutPlanLabel;
+  font-size: 1.8rem;
+  align-self: center;
+}
+
+#workoutPlan {
+  grid-area: workoutPlan;
+}
+
+#exercise {
+  grid-area: exercise;
+  min-width: 250px;
+}
+
+#numberOfSets {
+  grid-area: sets;
+  max-width: 80px;
+}
+
+#numberOfReps {
+  grid-area: reps;
+  max-width: 80px;
+
+}
+
+#howMuchWeight {
+  grid-area: weight;
+  max-width: 80px;
+
+}
+
+#restDuration {
+  grid-area: rest;
+  max-width: 80px;
+
+}
+
+button[type="submit"] {
+  grid-area: button;
+}
+
+.addExerciseButton {
+  grid-area: exerciseButton;
+  align-self: center;
+}
+
+.workoutCards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.singleCard {
+  display: flex;
+  flex-direction: column;
+  min-width: 500px;
+  text-align: center;
+}
+
+.exercisesInCard {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
