--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.App {
+/* .App {
   text-align: center;
   display: flex;
   flex-direction: column;
-}
+} */
 
 /* .App-header {
   background-color: #282c34;
