--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 h1 {
   font-size: 4rem;
   margin: 5px 0;
+  text-align: center;
 }
 
 h2 {
@@ -55,7 +56,7 @@ p, button, input {
   font-size: 1.8rem;
 }
 
-button {
+button, .mainPageLinks {
   color: white;
   border: 2px solid var(--accentPink);
   border-radius: 10px;
@@ -63,7 +64,47 @@ button {
   padding: 20px 15px;
   align-self: center;
   font-weight: bold;
+  transition: all 500ms;
 }
+
+.mainPageLinks {
+  text-decoration: none;
+  font-size: 1.8rem;
+}
+
+button:hover, .mainPageLinks:hover {
+  color: var(--accentPink);
+  border: 2px solid white;
+}
+
+.reactIcons {
+  font-size: 2.5rem;
+}
+
+.reactIcons, .backToHomeLink {
+  color: white;
+  transition: all 500ms;
+}
+
+.backToHomeLink {
+  position: absolute;
+  left: 15px;
+  top: 15px;
+  text-decoration: none;
+  font-size: 2rem;
+  width: 77px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.backToHomeLink:hover, .reactIcons:hover {
+  color: var(--accentTurquoise);
+}
+
+/* .backToHomeWrapper:hover {
+  color: var(--accentTurquoise);
+} */
 
 /* Main Page Styles */
 
@@ -88,12 +129,21 @@ button {
   justify-content: space-evenly;
 }
 
-/* App styles - form */
+/* Workout component */
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper h1 {
+  margin: 30px 0;
+}
 
 .createCard {
   align-self: center;
   padding: 50px 70px;
-  border: 4px double var(--accentTurquoise);
+  border: 4px solid var(--accentTurquoise);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -107,7 +157,6 @@ button {
 }
 
 form {
-  
   display: grid;
   grid-template-columns: 1fr repeat(5, auto) 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -141,19 +190,16 @@ form {
 #numberOfReps {
   grid-area: reps;
   max-width: 80px;
-
 }
 
 #howMuchWeight {
   grid-area: weight;
   max-width: 80px;
-
 }
 
 #restDuration {
   grid-area: rest;
   max-width: 80px;
-
 }
 
 button[type="submit"] {
