--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ h3 {
   font-size: 2.5rem;
 }
 
-p, button, input {
+p, button, input, li {
   font-size: 1.8rem;
 }
 
@@ -67,6 +67,10 @@ button, .mainPageLinks {
   font-weight: bold;
   transition: all 500ms;
 }
+
+/* ul {
+  padding: none;
+} */
 
 .mainPageLinks {
   text-decoration: none;
@@ -103,10 +107,6 @@ button:hover, .mainPageLinks:hover {
   color: var(--accentTurquoise);
 }
 
-/* .backToHomeWrapper:hover {
-  color: var(--accentTurquoise);
-} */
-
 /* Main Page Styles */
 
 .flexContainer {
@@ -119,7 +119,7 @@ button:hover, .mainPageLinks:hover {
 
 .mainPage {
   max-width: 600px;
-  min-height: 400px;
+  min-height: 500px;
   padding: 20px;
   margin: 0 auto;
   text-align: center;
@@ -141,6 +141,13 @@ button:hover, .mainPageLinks:hover {
   margin: 30px 0;
 }
 
+.instructions {
+  align-self: center;
+  max-width: 800px;
+  line-height: 1.6;
+  margin-bottom: 40px;
+}
+
 .createCard {
   align-self: center;
   padding: 50px 70px;
@@ -151,10 +158,15 @@ button:hover, .mainPageLinks:hover {
 }
 
 .exerciseLine {
+  margin-top: 20px;
   display: grid;
-  grid-template-columns: repeat(5, 100px);
+  /* grid-template-columns: repeat(5, 100px); */
+  grid-template-columns: 250px repeat(3, 60px);
   grid-gap: 10px;
   align-items: center;
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
 }
 
 form {
@@ -238,6 +250,10 @@ button[type="submit"] {
   position: relative;
 }
 
+.singleCard .logButton {
+  margin-top: 30px;
+}
+
 .deleteIcon {
   font-size: 2.5rem;
 }
@@ -255,24 +271,43 @@ button[type="submit"] {
 }
 
 .exercisesInCard {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-around; */
+  display: grid;
+  grid-template-columns: 250px repeat(3, 60px);
+  grid-gap: 15px;
+  align-items: center;
+  border-bottom: 1px dotted white;
+}
+
+.checkmarkIcon {
+  font-size: 2.5rem;
+  color: var(--accentTurquoise);
+}
+
+.checkmarkIconHidden {
+  display: none;
 }
 
 /* LOG Component */
 
 .logWrapper {
-  min-height: 400px;
+  min-height: 500px;
+  min-width: 550px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
   text-align: center;
   border: 2px solid var(--accentTurquoise);
-  padding: 50px;
+}
+
+.logWrapper h1 {
+  margin: 35px 0;
 }
 
 .eachLog {
   border-top: 1px dotted lightgray;
+  margin-bottom: 30px;
 }
