--- a/src/index.css
+++ b/src/index.css
@@ -68,16 +68,12 @@ button, .mainPageLinks {
   transition: all 500ms;
 }
 
-/* ul {
-  padding: none;
-} */
-
 .mainPageLinks {
   text-decoration: none;
   font-size: 1.8rem;
 }
 
-button:hover, .mainPageLinks:hover {
+button:hover, .mainPageLinks:hover, button:focus, .mainPageLinks:focus {
   color: var(--accentPink);
   border: 2px solid white;
 }
@@ -103,7 +99,7 @@ button:hover, .mainPageLinks:hover {
   align-items: center;
 }
 
-.backToHomeLink:hover, .reactIcons:hover {
+.backToHomeLink:hover, .reactIcons:hover, .backToHomeLink:active, .reactIcons:active, .backToHomeLink:focus, .reactIcons:focus {
   color: var(--accentTurquoise);
 }
 
@@ -158,9 +154,8 @@ button:hover, .mainPageLinks:hover {
 }
 
 .exerciseLine {
-  margin-top: 20px;
+  margin-top: 25px;
   display: grid;
-  /* grid-template-columns: repeat(5, 100px); */
   grid-template-columns: 250px repeat(3, 60px);
   grid-gap: 10px;
   align-items: center;
@@ -188,6 +183,7 @@ input {
   grid-area: workoutPlanLabel;
   font-size: 1.8rem;
   align-self: center;
+  text-align: center;
 }
 
 #workoutPlan {
@@ -271,9 +267,6 @@ button[type="submit"] {
 }
 
 .exercisesInCard {
-  /* display: flex;
-  align-items: center;
-  justify-content: space-around; */
   display: grid;
   grid-template-columns: 250px repeat(3, 60px);
   grid-gap: 15px;
@@ -310,4 +303,153 @@ button[type="submit"] {
 .eachLog {
   border-top: 1px dotted lightgray;
   margin-bottom: 30px;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 880px) {
+  /* FORM AND CARDS COMPONENT */
+  .instructions {
+    max-width: 80%;
+  }
+
+  .createCard {
+    padding: 45px 20px;
+  }
+}
+
+@media (max-width: 780px) {
+  /* FORM AND CARDS COMPONENT */
+  .instructions {
+    max-width: 75%;
+  }
+
+  form {
+    grid-template-columns: repeat(2, auto);
+    grid-template-areas: "workoutPlanLabel workoutPlan"
+                        "exercise exercise"
+                        "sets reps"
+                        "weight rest"
+                        "exerciseButton exerciseButton"
+                        "button button";
+    grid-gap: 20px;
+  }
+
+  #numberOfSets, #numberOfReps, #howMuchWeight, #restDuration {
+    max-width: min-content;
+  }
+
+  .exerciseLine {
+    grid-template-columns: 200px repeat(3, 60px);
+  }
+
+  /* LOGS COMPONENT */
+
+  .logWrapper {
+    margin: 80px 0;
+  }
+}
+
+@media (max-width: 625px) {
+  /* MAIN PAGE */
+  .mainPage {
+    margin: 60px 0;
+    max-width: 400px;
+    min-height: 600px;
+  }
+}
+
+@media (max-width: 590px) {
+  /* LOGS COMPONENT */
+
+  .logWrapper {
+    width: 310px;
+    min-width: 300px;
+    padding: 15px;
+  }
+}
+
+@media (max-width: 545px) {
+  /* WORKOUT CARD COMPONENT */
+  .singleCard {
+    width: 350px;
+    min-width: 350px;
+    max-width: 350px;
+  }
+
+  .singleCard h2 {
+    margin: 15px 0 25px;
+  }
+
+  h3 {
+    margin: 15px 0;
+  }
+
+  .exercisesInCard {
+    grid-template-columns: 1fr;
+  }
+
+  .exercisesInCard p {
+    margin: 10px 0;
+  }
+}
+
+@media (max-width: 475px) {
+  /* FORM AND CARDS COMPONENT */
+  .backToHomeLink {
+    flex-direction: column;
+    left: -3px;
+    top: 12px;
+  }
+
+  .wrapper h1 {
+    margin-top: 80px;
+  }
+
+  .instructions {
+    max-width: 85%;
+  }
+
+  form {
+    grid-template-columns: 1fr;
+    grid-template-areas: "workoutPlanLabel"
+                        "workoutPlan"
+                        "exercise"
+                        "sets"
+                        "reps"
+                        "weight"
+                        "rest"
+                        "exerciseButton"
+                        "button";
+    grid-gap: 20px;
+  }
+
+  #numberOfSets, #numberOfReps, #howMuchWeight, #restDuration {
+    width: 100%;
+    min-width: 100%;
+  }
+
+  .exerciseLine {
+    grid-template-columns: 1fr;
+    border-top: 1px dotted white;
+  }
+
+  .exerciseLine p {
+    margin: 10px 0;
+  }
+}
+
+@media (max-width: 440px) {
+  /* MAIN PAGE */
+  .mainPage {
+    max-width: 300px;
+    min-height: 700px;
+  }
+}
+
+@media (max-width: 385px) {
+  .singleCard {
+    min-width: 300px;
+    width: 300px;
+  }
 }
