--- a/src/index.css
+++ b/src/index.css
@@ -277,6 +277,9 @@ button[type="submit"] {
 .checkmarkIcon {
   font-size: 2.5rem;
   color: var(--accentTurquoise);
+  position: absolute;
+  right: 60px;
+  bottom: 20px;
 }
 
 .checkmarkIconHidden {
@@ -381,6 +384,11 @@ button[type="submit"] {
     margin: 15px 0 25px;
   }
 
+  .checkmarkIcon {
+    right: 20px;
+    bottom: 20px;
+  }
+
   h3 {
     margin: 15px 0;
   }
@@ -451,5 +459,10 @@ button[type="submit"] {
   .singleCard {
     min-width: 300px;
     width: 300px;
+  }
+
+  .checkmarkIcon {
+    right: 10px;
+    bottom: 20px;
   }
 }
