--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+/*** Setup snippet, normalize, border box ***/
+
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
+
+*, *:before, *:after {box-sizing: inherit}
+
+.visuallyhidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
+
+/*** Basic styles ***/
+
 :root {
   --backgroundColor: #242426;
   --accentTurquoise: #0abab5;
@@ -19,23 +31,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-/* Setup snippet */
-
-html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
-
-html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
-
-*, *:before, *:after {box-sizing: inherit}
-
-.visuallyhidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
-
-/* Basic styles */
-
 h1 {
   font-size: 4rem;
   margin: 5px 0;
@@ -53,6 +48,16 @@ h3 {
 
 p, button, input, li {
   font-size: 1.8rem;
+}
+
+input {
+  padding: 5px;
+}
+
+input:focus {
+  border: 2px solid var(--accentTurquoise);
+  outline: none;
+  box-shadow: 0 0 10px var(--accentTurquoise);
 }
 
 button, .mainPageLinks {
@@ -77,6 +82,17 @@ button:hover, .mainPageLinks:hover, button:focus, .mainPageLinks:focus {
   border: 2px solid white;
 }
 
+.guestLogin {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  color: var(--accentTurquoise);
+}
+
+.guestLogin:hover {
+  border: none;
+}
+
 .reactIcons {
   font-size: 2.5rem;
 }
@@ -99,7 +115,22 @@ button:hover, .mainPageLinks:hover, button:focus, .mainPageLinks:focus {
   color: var(--accentTurquoise);
 }
 
-/* Header Styles */
+.wrapper, .headerWrapper {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper h1 {
+  margin: 30px 0;
+}
+
+/*** Header Styles ***/
+
 header {
   border-bottom: 1px solid white;
   min-height: 80px;
@@ -130,7 +161,7 @@ header button {
   grid-area: link;
 }
 
-/* Main Page Styles */
+/*** Main Page Styles ***/
 
 /* Sign in, Sign Up */
 
@@ -190,21 +221,7 @@ header button {
   line-height: 1.5;
 }
 
-/* FormAndCards Component */
-
-.wrapper, .headerWrapper {
-  max-width: 1400px;
-  margin: 0 auto;
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-.wrapper h1 {
-  margin: 30px 0;
-}
+/*** FormAndCards Component ***/
 
 .instructions {
   align-self: center;
@@ -242,10 +259,6 @@ form {
                         ". exerciseButton . . button button .";
   grid-gap: 15px;
   justify-content: center;
-}
-
-input {
-  padding: 5px;
 }
 
 .workoutPlanLabel {
@@ -293,7 +306,7 @@ button[type="submit"] {
   align-self: center;
 }
 
-/* WorkoutCard Component */
+/*** WorkoutCard Component ***/
 
 .workoutCards {
   margin-top: 50px;
@@ -355,7 +368,7 @@ button[type="submit"] {
   display: none;
 }
 
-/* LOG Component */
+/*** LOG Component ***/
 
 .logWrapper {
   min-height: 500px;
@@ -377,7 +390,7 @@ button[type="submit"] {
   margin-bottom: 30px;
 }
 
-/* MEDIA QUERIES */
+/*** MEDIA QUERIES ***/
 
 @media (max-width: 1460px) {
   /* HEADER */
