--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 
 .visuallyhidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 
-/*** Basic styles ***/
+
+/*** General/Global styles ***/
 
 :root {
   --backgroundColor: #242426;
@@ -117,38 +118,6 @@ button:hover, .MainPage-links:hover, button:focus, .MainPage-links:focus {
 .wrapper h1 {
   margin: 30px 0;
 }
-
-/*** Header Styles ***/
-
-/* header {
-  border-bottom: 1px solid white;
-  min-height: 80px;
-  margin-bottom: 50px;
-}
-
-header button {
-  padding: 15px;
-}
-
-.headerWrapper {
-  display: grid;
-  grid-template-columns: auto 1fr auto auto;
-  grid-template-areas: "link . text button";
-  grid-gap: 25px;
-  align-items: center;
-}
-
-.headerWrapper h3 {
-  grid-area: text;
-}
-
-.headerWrapper button {
-  grid-area: button;
-}
-
-.headerWrapper .backToHomeWrapper {
-  grid-area: link;
-} */
 
 /*** FormAndCards Component ***/
 
@@ -324,37 +293,8 @@ button[type="submit"] {
 
 /*** MEDIA QUERIES ***/
 
-@media (max-width: 1460px) {
-  /* HEADER */
-  .headerWrapper {
-    width: 85%;
-  }
-}
 
 @media (max-width: 880px) {
-
-  /* HEADER */
-  .headerWrapper {
-    grid-template-columns: 1fr;
-    grid-template-areas: "link"
-                          "text"
-                          "button";
-    grid-gap: 10px;
-  }
-
-  header h3 {
-    text-align: center;
-    margin: 15px 0 10px;
-  }
-
-  .headerWrapper button {
-    justify-self: center;
-    margin-bottom: 20px;
-  }
-
-  .backToHomeWrapper {
-    margin: 20px auto 0;
-  }
 
   /* FORM AND CARDS COMPONENT */
   .instructions {
